Thu May  2 09:00:38 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/XML_Backing_Store.cpp:

          Clean up issues related to restarting the locator with persisted info.

Wed May  1 21:06:50 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:

          Repopulate the pinger with all known servers on a restart with
          a persistent store. This helps the list -a command return
          accurate results. Also list -a considers all final states that
          are not LS_DEAD to be be equivalent to alive.

        * orbsvcs/ImplRepo_Service/LiveCheck.h:
        * orbsvcs/ImplRepo_Service/LiveCheck.cpp:

          Ensure that when a server is in a final state of LS_LAST_TRANSIENT
          a new listener will be notified of that state.

        * orbsvcs/tests/ImplRepo/servers_interact_on_startup/README:
        * orbsvcs/tests/ImplRepo/servers_interact_on_startup/run_test.pl:

          Add new test variants for listing and locator restarts.

Wed May  1 14:16:54 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/servers_interact_on_startup/run_test.pl:

          Clear the result returned by the tao_imr when it is expected to
          return a non-zero value.

Wed May  1 13:32:09 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/ReconnectServer/run_test.pl:

          The test does not require persistence, removing it allows the test
          to work as intended on MacOS.

        * orbsvcs/tests/ImplRepo/servers_interact_on_startup/README:

          Document the new test variations.

Tue Apr 30 20:31:14 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:
        * orbsvcs/tests/ImplRepo/servers_interact_on_startup/run_test.pl:

          Fix the new hidden server test so it is portable and added to the
          nightly builds.
